--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@astrojs/vercel": "^4.0.2",
+    "@astrojs/netlify": "^3.0.0",
     "@nanostores/solid": "^0.4.2",
     "astro-compress": "^2.0.14",
     "nanostores": "^0.9.3"
